--- a/src/dashboard/portfolio/portfolioCard/card.css
+++ b/src/dashboard/portfolio/portfolioCard/card.css
@@ -1,8 +1,9 @@
 .card-container{
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     gap: 40px;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
