--- a/src/component/displayVideo/video.css
+++ b/src/component/displayVideo/video.css
@@ -6,10 +6,17 @@
     aspect-ratio: 160/83;
     flex-shrink: 0;
   }
+  .video-home{
+    display: none;
+  }
   
   @media screen and (max-width:768px) {
     .video-background{
-        aspect-ratio: 2/2;
+        aspect-ratio: 5/7;
+        display: none;
+    }
+    .video-home{
+      display: block;
     }
   }
   .video-background video {
