--- a/src/dashboard/structure/structure.css
+++ b/src/dashboard/structure/structure.css
@@ -87,6 +87,7 @@
     gap: 40px;    
     padding-bottom: 5px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 @media screen and (max-width:768px) {
