--- a/src/component/button/button.css
+++ b/src/component/button/button.css
@@ -39,6 +39,53 @@
 .button-secondary:hover .text-wrapper {
   color: #f7f5f2;
 }
+
+
+
+
+.button-primary {
+  align-items: center;
+  border: 1px solid;
+  border-color: #333332;
+  background-color: var(--newjet-black);
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  padding: 20px 40px;
+  position: relative;
+  min-width: 200px;
+  width: 100%;
+}
+
+.button-secondary .red{
+  background-color: var(--persian-red);
+}
+
+.button-primary .text-wrapper {
+  color: #f7f5f2;
+  font-family: 'HK Grotesk-MediumLegacy' Helvetica;
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0;
+  line-height: normal;
+  margin-top: -1px;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  text-transform: uppercase;
+  width: fit-content;
+}
+
+.button-primary:hover {
+  background-color: var(--isabeline);
+  border-color: var( --newjet-black);
+}
+
+.button-primary:hover .text-wrapper {
+  color: #333333;
+}
+
+
 @media screen and (max-width: 768px) {
   .button-secondary {
       align-items: center;
@@ -69,6 +116,30 @@
     }
     .hidden{
       display: none;
+    }
+    .button-primary {
+      align-items: center;
+      border: 1px solid;
+      border-color: var(--newjet-black);
+      display: inline-flex;
+      gap: 20px;
+      justify-content: center;
+      padding: 16px 30px;
+      position: relative;
+    }
+    
+    .button-primary .text-wrapper {
+      color: var(--isabeline);
+      font-family: 'HK Grotesk-MediumLegacy', Helvetica;
+      font-size: 12px;
+      font-weight: 600;
+      letter-spacing: 0;
+      line-height: normal;
+      margin-top: -1px;
+      position: relative;
+      text-align: center;
+      white-space: nowrap;
+      width: fit-content;
     }
     
 }
