--- a/src/component/form/form.css
+++ b/src/component/form/form.css
@@ -118,11 +118,23 @@
   /* file upload button active state */
   .form input[type="file"]::file-selector-button:active {
     background-color: #e5e7eb;
-  }
-
+  } .logo-text{
+  opacity: 0.7;
+  font-size: 22px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
 @media screen and (max-width :768px) {
     .form{
            gap: 20px;
+    }
+    .logo-text{
+      opacity: 0.7;
+      font-size: 10px;
+      display: flex;
+      gap: 5px;
+      align-items: center;
     }
     
     .form .lable{
