--- a/src/component/login/login.css
+++ b/src/component/login/login.css
@@ -1,5 +1,8 @@
 .PhoneInputCountry{
-    display: none !important;
+    border: 1px solid black;
+    border-right: none;
+    padding: 0 10px;
+    margin: 0 !important;
 }
 .otp-page .input-group{
     width: fit-content;
