--- a/src/component/button1/button1.css
+++ b/src/component/button1/button1.css
@@ -1,4 +1,4 @@
-.button-primary {
+.button-primary-price {
     align-items: center;
     border: 1px solid;
     border-color:var(--isabeline);
@@ -12,11 +12,11 @@
     
   }
 
-  .button-primary .red{
+  .button-primary-price .red{
     background-color: var(--persian-red);
   }
   
-  .button-primary .text-wrapper {
+  .button-primary-price .text-wrapper {
     color: var(--jet-black);
     font-family: "HK Grotesk-SemiBoldLegacy", Helvetica;
     font-size: 16px;
@@ -30,28 +30,28 @@
     width: fit-content;
   }
   
-  .button-primary:hover {
+  .button-primary-price:hover {
     background-color: transparent;
     border-color: var( --isabeline);
   }
   
-  .button-primary:hover .text-wrapper {
+  .button-primary-price:hover .text-wrapper {
     color: #f7f5f2;
   }
   @media screen and (max-width: 768px) {
-    .button-primary {
+    .button-primary-price {
         align-items: center;
         border: 1px solid;
         border-color: var(--isabeline);
         display: inline-flex;
         gap: 20px;
         justify-content: center;
-        padding: 16px 20px;
+        padding: 13px 20px;
         position: relative;
         width: 100%;
       }
       
-      .button-primary .text-wrapper {
+      .button-primary-price .text-wrapper {
         color: var(--jet-black);
         font-family: "HK Grotesk-SemiBoldLegacy", Helvetica;
         font-size: 10px;
@@ -74,7 +74,7 @@
 }
 
 @media screen and (max-width: 480px) {
-    .button-primary .text-wrapper {
+    .button-primary-price .text-wrapper {
         font-size: 12px; /* Further adjust font size for even smaller screens */
     }
 }
