--- a/src/component/form/form.css
+++ b/src/component/form/form.css
@@ -8,10 +8,9 @@
 
 .form .lable{
     color: var(--Jet-Black, #333332);
-    font-family: 'HK Grotesk-Medium';
+    font-family: 'HK Grotesk-Regular';
     font-size: 20px;
     font-style: normal;
-    font-weight: 400;
     line-height: 123.023%;
     text-align: center;
     width: fit-content;
@@ -72,7 +71,10 @@
     flex-wrap: wrap;
     gap: 20px;
   }
-  
+  .form .button-radio label{
+    text-transform: capitalize;
+
+  }
  .form .button-radio input[type="radio"] {
     display: none;
   }
@@ -150,7 +152,7 @@
     }
     
     .form .form-group{
-       gap: 7px;
+       gap: 6px;
        width: 100%;
     }
     .form .form-group input{
