--- a/src/dashboard/checkout/checkout.css
+++ b/src/dashboard/checkout/checkout.css
@@ -28,7 +28,7 @@
   
   .check-out .headding {
     color: var(--jet-black);
-    font-family: "FreightBigProMedium-Regular-☞", Helvetica;
+    font-family: freight-big-pro, Helvetica;
     font-size: 64px;
     font-weight: 400;
     letter-spacing: 0;
@@ -43,7 +43,6 @@
     font-family: "HK Grotesk-RegularLegacy", Helvetica;
     font-size: 24px;
     font-weight: 400;
-    letter-spacing: 1px;
     line-height: normal;
     opacity: 0.4;
     position: relative;
@@ -119,6 +118,7 @@
     gap: 20px;
     position: relative;
     width: 100%;
+    align-items: end;
   }
 
   .check-out .items{
@@ -229,7 +229,7 @@
       
       .check-out .headding {
         color: var(--jet-black);
-        font-family: "FreightBigProMedium-Regular-☞", Helvetica;
+        font-family:  freight-big-pro, Helvetica;
         font-size: 24px;
         font-weight: 400;
         letter-spacing: 0;
@@ -244,7 +244,6 @@
         font-family: "HK Grotesk-RegularLegacy", Helvetica;
         font-size: 10px;
         font-weight: 400;
-        letter-spacing: 1px;
         line-height: normal;
         opacity: 0.4;
         position: relative;
@@ -270,7 +269,7 @@
         display: flex;
         flex: 0 0 auto;
         flex-direction: column;
-        gap: 10px;
+        gap: 5px;
         position: relative;
         width: 100%;
       }
@@ -279,7 +278,7 @@
         color: var(--jet-black);
         font-family: "HK Grotesk-BoldLegacy", Helvetica;
         font-size: 12px;
-        font-weight: 700;
+        font-weight: 400;
         letter-spacing: 0;
         line-height: normal;
         margin-top: -1px;
@@ -313,7 +312,6 @@
       }
       
       .check-out .cont {
-        align-items: flex-start;
         align-self: stretch;
         display: flex;
         flex: 0 0 auto;
