--- a/src/dashboard/footer/footer.css
+++ b/src/dashboard/footer/footer.css
@@ -5,6 +5,7 @@
     justify-content: space-between;
     padding: 10px 20px;
     gap:10px;
+    margin-top: auto;
 }
 
 .dashboard-body .dash-footer .link-cont{
@@ -30,14 +31,14 @@
 }
 @media screen and (max-width:768px) {
     .dashboard-body .dash-footer{
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: flex-end;
+        flex-direction: column;
+        align-items: center;
         opacity: 0.7;
     }
     .dashboard-body .dash-footer .link-cont{
         display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 5px 15px;
         width: fit-content;
         flex-wrap: wrap;
