--- a/src/dashboard/home/home.css
+++ b/src/dashboard/home/home.css
@@ -11,6 +11,7 @@
 
 .main-banner {
     width: 100%;
+    flex-shrink: 0;
     aspect-ratio: 1021/815;
     background-color: var(--jet-black);
     background-size: 100% auto;
@@ -21,8 +22,18 @@
     justify-content: flex-end;
     gap: 10px;
     padding: 70px;
+    position: relative;
 }
-
+.main-banner::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 0;
+    height: 100%;
+    background: linear-gradient(231deg, rgba(51, 51, 50, 0.00) 31.87%, rgba(51, 51, 50, 0.30) 58.66%, rgba(0, 0, 0, 0.44) 83.3%);
+  }
 .main-banner .heading{
     color: var(--Isabeline, #F7F5F2);
     text-align: center;
@@ -33,6 +44,9 @@
     font-weight: 400;
     line-height: normal;
     text-align: left;
+    z-index: 1;
+
+    
 }
 
 .main-banner .sub_heading{
@@ -43,6 +57,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+z-index: 1;
+    
 }
 
 .main-banner .button{
@@ -51,8 +67,9 @@
     align-items: center;
     gap: 20px;
     font-family:'HK Grotesk-Regular';
-    color: var(--Jet-Black, #333332);
-    background-color: #fff;
+    color: var(--isabeline);
+    text-shadow: 0 0 1.5px black;
+    background-color: #ffffff47;
     width: fit-content;
 text-align: center;
 font-feature-settings: 'clig' off, 'liga' off;
@@ -62,6 +79,7 @@ font-weight: 400;
 line-height: normal;
 text-transform: uppercase;
 margin-top: 10px;
+z-index: 1;
 }
 
 @media screen and (max-width:768px) {
@@ -72,15 +90,15 @@ margin-top: 10px;
         background-color: var(--jet-black);
         /* background-size: auto 100%; */
         /* background-position-y: -46px; */
-        gap: 5px;
+        gap: 3px;
         padding: 20px;
     }
     .main-banner .heading{
-        font-size: 20px;
+        font-size: 24px;
     }
     
     .main-banner .sub_heading{
-        font-size: 10px;
+        font-size: 12px;
     }
     
     .main-banner .button{
