--- a/src/dashboard/new-form/forms/form.css
+++ b/src/dashboard/new-form/forms/form.css
@@ -8,10 +8,9 @@
 
 .form .lable{
     color: var(--Jet-Black, #333332);
-    font-family: 'HK Grotesk-Medium';
+    font-family: 'HK Grotesk-Regular';
     font-size: 20px;
     font-style: normal;
-    font-weight: 400;
     line-height: 123.023%;
     text-align: center;
     width: fit-content;
@@ -154,7 +153,7 @@
     }
     
     .form .form-group{
-       gap: 7px;
+       gap: 6px;
        width: 100%;
     }
     .form .form-group input{
