--- a/src/component/pricingD2c/card/pricingD2C.css
+++ b/src/component/pricingD2c/card/pricingD2C.css
@@ -1,7 +1,6 @@
 .pricing-card-new-d2c {
     align-items: flex-start;
-    border: 1px solid;
-    border-color: var(--jet-black);
+    border: 1px solid #3333324d;
     display: inline-flex;
     flex-direction: column;
     gap: 40px;
@@ -54,6 +53,7 @@
     flex: 0 0 auto;
     gap: 6px;
     justify-content: flex-end;
+    align-items: center;
     position: relative;
   }
   
@@ -69,7 +69,7 @@
     font-size: 18px;
     font-weight: 400;
     letter-spacing: 0;
-    line-height: 18px;
+    line-height: 1px;
     opacity: 0.6;
     position: relative;
     text-align: center;
@@ -359,12 +359,12 @@
     }
     
     .pricing-card-new-d2c .svg {
-      height: 18px;
-      width: 18px;
+      height: 14px;
+      width: 14px;
     }
     
     .pricing-card-new-d2c .svg-text .text {
-      font-size: 12px;
+      font-size: 9px;
     }
     
     .pricing-card-new-d2c .bullets {
@@ -456,6 +456,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 80%;
     position: relative;
   }
   
@@ -517,9 +518,9 @@
 }
 
 .sub-category-card .celebration {
-  height: 23px;
+  height: 20px;
   position: relative;
-  width: 23px;
+  width: 20px;
 }
 
 .sub-category-card .category-sub-text {
