--- a/src/component/landingDash/landingdash.css
+++ b/src/component/landingDash/landingdash.css
@@ -81,6 +81,10 @@
     transition: 0.2s;
     padding: 8px 24px;
 }
+.landingDash .side-navigation .button img{
+    width: 28px;
+    height: auto;
+}
 
 .landingDash .side-navigation .active{
     background: rgba(51, 51, 50, 0.10);
