--- a/src/component/navbarLanding/navbar.css
+++ b/src/component/navbarLanding/navbar.css
@@ -2,7 +2,7 @@
     align-items: center;
     display: flex;
     justify-content: space-between;
-    padding: 15px;
+    padding: 15px 5px;
     position: fixed;
     top:0;
     z-index: 99999999;
@@ -172,10 +172,14 @@ a{
   @media screen and (max-width: 768px) {
     .nav {
         display: flex;
-        flex-direction: row-reverse;
+        flex-direction: row;
     }
     .nav .navTitle {
         font-size: 32px; /* Adjust font size for mobile */
+        gap: 10px;
+        width: 100%;
+        display: flex;
+        align-items: baseline;
     }
 
     .nav-open .frame {
