--- a/src/dashboard/structure/structure.css
+++ b/src/dashboard/structure/structure.css
@@ -93,13 +93,14 @@
 .dashboard-body .main{
     width: 100%;
     height: 100%;
-    padding: 30px 22px;
+    padding: 30px 20px;
     display: flex;
     flex-direction: column;
     gap: 40px;    
     padding-bottom: 10px;
     overflow-y: auto;
     overflow-x: hidden;
+    padding-top: 20px;
 }
 
 @media screen and (max-width:768px) {
