--- a/src/component/product/cards/processCard/processCard.css
+++ b/src/component/product/cards/processCard/processCard.css
@@ -1,11 +1,12 @@
 .process-container {
     align-items: center;
-    background-color: #333332;
+    background-color: var(--isabeline);
     display: flex;
     flex-direction: column;
     gap: 90px;
-    padding: 50px 60px;
+    /* padding: 50px 60px; */
     position: relative;
+    margin-bottom: 30px;
 }
 
 .process-container .heading {
@@ -19,7 +20,7 @@
 }
 
 .process-container .sub-title {
-    color: var(--isabeline);
+    color: var(--jet-black);
     font-family: "Proxima Nova-Regular", Helvetica;
     font-size: 32px;
     font-weight: 400;
@@ -33,7 +34,7 @@
 }
 
 .process-container .title {
-    color: var(--isabeline);
+    color: var(--jet-black);
     font-family: freight-big-pro, Helvetica;
     font-size: 64px;
     font-weight: 400;
@@ -82,7 +83,7 @@
 
 .process-container .text-wrapper {
     align-self: stretch;
-    color: var(--isabeline);
+    color: var(--jet-black);
     font-family: freight-big-pro, Helvetica;
     font-size: 36px;
     font-weight: 400;
@@ -93,7 +94,7 @@
 }
 
 .process-container .div {
-    color: var(--isabeline);
+    color: var(--jet-black);
     font-family: "HK Grotesk-RegularLegacy", Helvetica;
     font-size: 20px;
     font-weight: 400;
@@ -121,7 +122,7 @@
 
 .process-container .text-wrapper-2 {
     align-self: stretch;
-    color: var(--isabeline);
+    color: var(--jet-black);
     font-family: ""freight-big-pro"-Book", Helvetica;
     font-size: 36px;
     font-weight: 400;
@@ -134,7 +135,7 @@
 
 .process-container .p {
     align-self: stretch;
-    color: var(--isabeline);
+    color: var(--jet-black);
     font-family: "HK Grotesk-RegularLegacy", Helvetica;
     font-size: 20px;
     font-weight: 400;
@@ -142,9 +143,13 @@
     line-height: normal;
     position: relative;
 }
+.process-container .carousel-indicators button{
+    background-color: var(--jet-black);
+    height: 1px;
+}
 @media screen and (max-width:768px) {
     .process-container {
-        padding: 50px 30px;
+        /* padding: 50px 30px; */
         gap: 45px;
     }
 
